<resources>
    <string name="app_name">蓝鲸音乐</string>
    <string name="find">发现</string>
    <string name="mine">我的</string>
    <string name="singer">歌手</string>
    <string name="music_list">歌单</string>
    <string name="rank">排行榜</string>
    <string name="radio">播单</string>
    <string name="play_all">播放全部</string>
    <string name="look_more">查看更多</string>
    <string name="recommend_song_list">推荐歌单</string>
    <string name="new_music">新歌推送</string>
    <string name="hot_radio">热门播单</string>
    <string name="search">搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="search_hot_word">热搜榜</string>
    <string name="bottom_view">滑到底部了～</string>
    <string name="category">分类</string>
    <string name="empty_view_text">暂无数据，下拉刷新</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="reset_password">修改密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="go_to_register">点击注册</string>
    <string name="hint_phone_num">输入手机号</string>
    <string name="hint_password">输入密码</string>
    <string name="hint_code">输入验证码</string>
    <string name="hint_name">输入昵称</string>
    <string name="get_code">获取验证码</string>
    <string name="identity_music_default">听歌识曲</string>
    <string name="identity_music_afs">哼唱识曲</string>
    <string name="begin_record">开始录音</string>
    <string name="finish_record">点击完成录音</string>
    <string name="begin_identify">开始识别</string>
    <string name="identify">识别中</string>

    <string name="tip_begin_record">点击开始录音</string>
    <string name="tip_recording">录音完成，点击开始识别</string>
    <string name="tip_identify">识别中,请耐心等待...</string>
    <string name="btn_identify_retry">重新识别</string>
    <string name="btn_to_search">前往搜索</string>
    <string name="refresh_success">刷新成功！</string>

    <string name="local_music">本地音乐</string>
    <string name="play_record">最近播放</string>
    <string name="download_music">下载歌曲</string>
    <string name="collect_playlist">收藏歌单</string>
    <string name="goto_login">前往登录></string>
    <string name="switch_account">切换账号></string>
    <string name="collect_tips">登录后可查看收藏歌单</string>
</resources>