<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_register"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/input_phone"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="250dp"
            android:hint="@string/hint_phone_num"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/input_nickname"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_name"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_captcha"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/get_code"
                android:textSize="14sp" />

            <Button
                android:id="@+id/get_captcha"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/shape"
                android:text="@string/get_code"
                android:textColor="#ffffff"
                android:textSize="12sp" />

        </LinearLayout>

        <Button
            android:id="@+id/register"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="16sp" />

    </LinearLayout>

</layout>