<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".search.ui.SearchActivity">

        <com.example.mymusic.customview.search.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:textHintSearch="@string/search" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorMain"
            app:layout_constraintTop_toBottomOf="@id/search_view" />

        <TextView
            android:id="@+id/tv_history_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="14dp"
            android:text="@string/search_history"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_view" />
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/image_delete_history"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/history_delete"
            app:layout_constraintBottom_toBottomOf="@id/tv_history_title"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxHeight="300dp"
            android:paddingStart="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_history_title" />

        <TextView
            android:id="@+id/tv_hot_word_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="14dp"
            android:text="@string/search_hot_word"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_history" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_hot_words"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingStart="2dp"
            app:layout_constraintTop_toBottomOf="@id/tv_hot_word_title" />

        <TextView
            android:id="@+id/identity_music_default"
            android:layout_width="260dp"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/gradient_search_default"
            android:gravity="center"
            android:text="@string/identity_music_default"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/search_hot_words"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/identity_music_afs"
            android:layout_width="260dp"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/gradinet_search"
            android:gravity="center"
            android:text="@string/identity_music_afs"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/identity_music_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>