<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="95dp">

    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <ImageView
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_tab_item"
            android:scaleType="center"
            android:src="@drawable/tab_singer"
            android:layout_width="46dp"
            android:layout_height="46dp"/>
        <TextView
            android:layout_marginTop="7dp"
            android:text="@string/singer"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <ImageView
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_tab_item"
            android:scaleType="center"
            android:src="@drawable/tab_music_list"
            android:layout_width="46dp"
            android:layout_height="46dp"/>
        <TextView
            android:layout_marginTop="7dp"
            android:text="@string/music_list"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <ImageView
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_tab_item"
            android:scaleType="center"
            android:src="@drawable/tab_rank"
            android:layout_width="46dp"
            android:layout_height="46dp"/>
        <TextView
            android:layout_marginTop="7dp"
            android:text="@string/rank"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <ImageView
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_tab_item"
            android:scaleType="center"
            android:src="@drawable/tab_radio"
            android:layout_width="46dp"
            android:layout_height="46dp"/>
        <TextView
            android:layout_marginTop="7dp"
            android:text="@string/radio"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>